@@ -8,6 +8,7 @@
 - Make simple left aligned numbering of textfield renderers work again.
 - Added "maxlength" attribute to textareas. If set a small indicator is shown
   below the textfield counting the remaining chars.
+- Gray out sections and text areas too if a conditional is inactive.
 
 - !!!WIP AND BROKEN!!! Improved performace: Conditionals are now evaluted on
   serverside.  So there is no need anymore to let the JS script code to enable
